maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: not found: value coord
  coord = findExit(H,L)
  ^JediEscaper:7: error: not found: value coord
  val xSortie = coord(0)
                ^JediEscaper:8: error: not found: value coord
  val ySortie = coord(1)
                ^