maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    // Your code here
  val H = getWorldHeight()
  val L = getWorldWidth()
  coord = findExit(H,L)
  val xSortie = coord(0)
  val ySortie = coord(1)
  
  
}

def findExit(H:Int, L:Int):Array[Int] ={
  /* Renvoie la sortie d'un monde de taille (x,y) donnée */
  var x = 0
  var y = 0
  while (!hasBaggle(x,y)){
    x = x+1
    y=0
    while (!hasBaggle(x,y)){
      y = y + 1 
    }
  }
  return Array[Int](x,y)
  
}